# AlexaOctoPrint

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
Easy_setup_HAProxy/: README.md  easy_setup_haproxy.py
Source/octoprint_alexaoctoprint/: __init__.py  actions.py  debug.py  device_state.py  enclosure.py  haproxy_setup.py  hue.py  proxy.py  ssdp.py  update.py
Source/octoprint_alexaoctoprint/static/css/: alexaoctoprint.css
Source/octoprint_alexaoctoprint/static/js/: alexaoctoprint.js
Source/octoprint_alexaoctoprint/templates/: alexaoctoprint_settings.jinja2
extras/: alexaoctoprint.md
plugin/: SHA256SUMS  haproxy.cfg.example
tests/: test_actions.py  test_device_state.py  test_haproxy_setup.py  test_hue.py  test_plugin_behaviors.py  test_update.py
